@@ -346,6 +346,19 @@ name|defaultField
 init|=
 literal|""
 decl_stmt|;
+DECL|field|literalsOverride
+specifier|private
+name|boolean
+name|literalsOverride
+decl_stmt|;
+DECL|field|literalFieldNames
+specifier|private
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|literalFieldNames
+decl_stmt|;
 DECL|method|SolrContentHandler
 specifier|public
 name|SolrContentHandler
@@ -448,6 +461,19 @@ argument_list|(
 name|CAPTURE_ATTRIBUTES
 argument_list|,
 literal|false
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|literalsOverride
+operator|=
+name|params
+operator|.
+name|getBool
+argument_list|(
+name|LITERALS_OVERRIDE
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
 name|this
@@ -559,17 +585,12 @@ name|SolrInputDocument
 name|newDocument
 parameter_list|()
 block|{
-name|float
-name|boost
-init|=
-literal|1.0f
-decl_stmt|;
-comment|//handle the metadata extracted from the document
-name|addMetadata
+comment|//handle the literals from the params. NOTE: This MUST be called before the others in order for literals to override other values
+name|addLiterals
 argument_list|()
 expr_stmt|;
-comment|//handle the literals from the params
-name|addLiterals
+comment|//handle the metadata extracted from the document
+name|addMetadata
 argument_list|()
 expr_stmt|;
 comment|//add in the content
@@ -640,12 +661,29 @@ operator|>
 literal|0
 condition|)
 block|{
-name|addField
-argument_list|(
+name|String
+name|fieldName
+init|=
 name|entry
 operator|.
 name|getKey
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|literalsOverride
+operator|&&
+name|literalFieldNames
+operator|.
+name|contains
+argument_list|(
+name|fieldName
+argument_list|)
+condition|)
+continue|continue;
+name|addField
+argument_list|(
+name|fieldName
 argument_list|,
 name|entry
 operator|.
@@ -668,6 +706,18 @@ name|void
 name|addContent
 parameter_list|()
 block|{
+if|if
+condition|(
+name|literalsOverride
+operator|&&
+name|literalFieldNames
+operator|.
+name|contains
+argument_list|(
+name|contentFieldName
+argument_list|)
+condition|)
+return|return;
 name|addField
 argument_list|(
 name|contentFieldName
@@ -699,6 +749,15 @@ operator|.
 name|getParameterNamesIterator
 argument_list|()
 decl_stmt|;
+name|literalFieldNames
+operator|=
+operator|new
+name|HashSet
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+expr_stmt|;
 while|while
 condition|(
 name|paramNames
@@ -753,6 +812,13 @@ name|pname
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|literalFieldNames
+operator|.
+name|add
+argument_list|(
+name|name
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 comment|/**    * Add in any metadata using {@link #metadata} as the source.    */
@@ -773,6 +839,18 @@ name|names
 argument_list|()
 control|)
 block|{
+if|if
+condition|(
+name|literalsOverride
+operator|&&
+name|literalFieldNames
+operator|.
+name|contains
+argument_list|(
+name|name
+argument_list|)
+condition|)
+continue|continue;
 name|String
 index|[]
 name|vals
