@@ -2308,6 +2308,269 @@ name|expected
 parameter_list|)
 block|{}
 block|}
+DECL|method|testLiteralsOverride
+specifier|public
+name|void
+name|testLiteralsOverride
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ExtractingRequestHandler
+name|handler
+init|=
+operator|(
+name|ExtractingRequestHandler
+operator|)
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getRequestHandler
+argument_list|(
+literal|"/update/extract"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"handler is null and it shouldn't be"
+argument_list|,
+name|handler
+operator|!=
+literal|null
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='0']"
+argument_list|)
+expr_stmt|;
+comment|// Here Tika should parse out a title for this document:
+name|loadLocal
+argument_list|(
+literal|"extraction/solr-word.pdf"
+argument_list|,
+literal|"fmap.created"
+argument_list|,
+literal|"extractedDate"
+argument_list|,
+literal|"fmap.producer"
+argument_list|,
+literal|"extractedProducer"
+argument_list|,
+literal|"fmap.creator"
+argument_list|,
+literal|"extractedCreator"
+argument_list|,
+literal|"fmap.Keywords"
+argument_list|,
+literal|"extractedKeywords"
+argument_list|,
+literal|"fmap.Author"
+argument_list|,
+literal|"extractedAuthor"
+argument_list|,
+literal|"literal.id"
+argument_list|,
+literal|"three"
+argument_list|,
+literal|"fmap.content"
+argument_list|,
+literal|"extractedContent"
+argument_list|,
+literal|"fmap.language"
+argument_list|,
+literal|"extractedLanguage"
+argument_list|,
+literal|"fmap.Creation-Date"
+argument_list|,
+literal|"extractedDate"
+argument_list|,
+literal|"fmap.AAPL:Keywords"
+argument_list|,
+literal|"ignored_a"
+argument_list|,
+literal|"fmap.xmpTPg:NPages"
+argument_list|,
+literal|"ignored_a"
+argument_list|,
+literal|"fmap.Last-Modified"
+argument_list|,
+literal|"extractedDate"
+argument_list|)
+expr_stmt|;
+comment|// Here the literal value should override the Tika-parsed title:
+name|loadLocal
+argument_list|(
+literal|"extraction/solr-word.pdf"
+argument_list|,
+literal|"literal.title"
+argument_list|,
+literal|"wolf-man"
+argument_list|,
+literal|"fmap.created"
+argument_list|,
+literal|"extractedDate"
+argument_list|,
+literal|"fmap.producer"
+argument_list|,
+literal|"extractedProducer"
+argument_list|,
+literal|"fmap.creator"
+argument_list|,
+literal|"extractedCreator"
+argument_list|,
+literal|"fmap.Keywords"
+argument_list|,
+literal|"extractedKeywords"
+argument_list|,
+literal|"fmap.Author"
+argument_list|,
+literal|"extractedAuthor"
+argument_list|,
+literal|"literal.id"
+argument_list|,
+literal|"four"
+argument_list|,
+literal|"fmap.content"
+argument_list|,
+literal|"extractedContent"
+argument_list|,
+literal|"fmap.language"
+argument_list|,
+literal|"extractedLanguage"
+argument_list|,
+literal|"fmap.Creation-Date"
+argument_list|,
+literal|"extractedDate"
+argument_list|,
+literal|"fmap.AAPL:Keywords"
+argument_list|,
+literal|"ignored_a"
+argument_list|,
+literal|"fmap.xmpTPg:NPages"
+argument_list|,
+literal|"ignored_a"
+argument_list|,
+literal|"fmap.Last-Modified"
+argument_list|,
+literal|"extractedDate"
+argument_list|)
+expr_stmt|;
+comment|// Here we mimic the old behaviour where literals are added, not overridden
+name|loadLocal
+argument_list|(
+literal|"extraction/solr-word.pdf"
+argument_list|,
+literal|"literalsOverride"
+argument_list|,
+literal|"false"
+argument_list|,
+comment|// Trick - we first map the metadata-title to an ignored field before we replace with literal title
+literal|"fmap.title"
+argument_list|,
+literal|"ignored_a"
+argument_list|,
+literal|"literal.title"
+argument_list|,
+literal|"old-behaviour"
+argument_list|,
+literal|"literal.extractedKeywords"
+argument_list|,
+literal|"literalkeyword"
+argument_list|,
+literal|"fmap.created"
+argument_list|,
+literal|"extractedDate"
+argument_list|,
+literal|"fmap.producer"
+argument_list|,
+literal|"extractedProducer"
+argument_list|,
+literal|"fmap.creator"
+argument_list|,
+literal|"extractedCreator"
+argument_list|,
+literal|"fmap.Keywords"
+argument_list|,
+literal|"extractedKeywords"
+argument_list|,
+literal|"fmap.Author"
+argument_list|,
+literal|"extractedAuthor"
+argument_list|,
+literal|"literal.id"
+argument_list|,
+literal|"five"
+argument_list|,
+literal|"fmap.content"
+argument_list|,
+literal|"extractedContent"
+argument_list|,
+literal|"fmap.language"
+argument_list|,
+literal|"extractedLanguage"
+argument_list|,
+literal|"fmap.Creation-Date"
+argument_list|,
+literal|"extractedDate"
+argument_list|,
+literal|"fmap.AAPL:Keywords"
+argument_list|,
+literal|"ignored_a"
+argument_list|,
+literal|"fmap.xmpTPg:NPages"
+argument_list|,
+literal|"ignored_a"
+argument_list|,
+literal|"fmap.Last-Modified"
+argument_list|,
+literal|"extractedDate"
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"title:solr-word"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"title:wolf-man"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"extractedKeywords:(solr AND word AND pdf AND literalkeyword)"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|loadLocal
 name|SolrQueryResponse
 name|loadLocal
